crates/biome_cli/tests/snapshots/main_cases_html/should_error_when_vue_is_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.html
```

## `biome.json`

```json
{
  "html": {
    "linter": {
      "enabled": true
    }
  }
}
```

## `file.html`

```html
<div v-if="show">{{ message }}</div>

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.html:1:6 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Vue syntax isn't enabled. Is this supposed to be a .vue file?
  
  > 1 │ <div v-if="show">{{ message }}</div>
      │      ^^^^^^^^^^^
    2 │ 
  
  i Remove it, change the extension to .vue, or enable the parsing using the html.parser.vue option.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
