crates/biome_cli/tests/snapshots/main_cases_html/should_format_a_svg_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true
    }
  }
}
```

## `image.svg`

```svg
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
	<circle cx="50" cy="50" r="40" fill="red" />
</svg>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
