crates/biome_cli/tests/snapshots/main_cases_html/should_format_indent_embedded_languages.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.html
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true,
      "indentScriptAndStyle": true
    }
  }
}
```

## `file.html`

```html
<script>
	function lorem() {
		return "ipsum";
	}
</script>
<style>
	#id .class div > p {
		background-color: red;
		align: center;
		padding: 0;
	}
</style>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
