crates/biome_cli/tests/snapshots/main_cases_html/should_handle_htm_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome check index.htm
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true
    },
    "linter": {
      "enabled": true
    }
  }
}
```

## `index.htm`

```htm
<div scope = "col"></div>

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
index.htm:1:6 lint/a11y/noHeaderScope  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Avoid using the scope attribute on elements other than th elements.
  
  > 1 │ <div scope = "col"></div>
      │      ^^^^^^^^^^^^^
    2 │ 
  
  i The scope attribute is used to associate a data cell with its corresponding header cell in a data table,
                so it should be placed on th elements to provide accessibility to screen readers.
  
  i Follow the links for more information,
                WCAG 1.3.1
                WCAG 4.1.1
  
  i Unsafe fix: Remove the scope attribute.
  
    1 │ <div·scope·=·"col"></div>
      │      -------------       

```

```block
index.htm format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 │ <div·scope·=·"col"></div>
      │           - -            

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
