crates/biome_cli/tests/snapshots/main_cases_html/should_handle_svg_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check image.svg
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true
    }
  }
}
```

## `image.svg`

```svg
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="red" /></svg>

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
image.svg:1:1 lint/a11y/noSvgWithoutTitle ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Alternative text title element cannot be empty
  
  > 1 │ <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="red" /></svg>
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ 
  
  i For accessibility purposes, SVGs should have an alternative text, provided via title element. If the svg element has role="img", you should add the aria-label or aria-labelledby attribute.
  

```

```block
image.svg format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - <svg·xmlns="http://www.w3.org/2000/svg"·viewBox="0·0·100·100"><circle·cx="50"·cy="50"·r="40"·fill="red"·/></svg>
      1 │ + <svg·xmlns="http://www.w3.org/2000/svg"·viewBox="0·0·100·100">
      2 │ + → <circle·cx="50"·cy="50"·r="40"·fill="red"·/>
      3 │ + </svg>
    2 4 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
