crates/biome_cli/tests/snapshots/main_cases_html/should_not_error_when_vue_is_enabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.html
```

## `biome.json`

```json
{
  "html": {
    "parser": {
      "vue": true
    },
    "linter": {
      "enabled": true
    }
  }
}
```

## `file.html`

```html
<div v-if="show">{{ message }}</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
