crates/biome_cli/tests/snapshots/main_cases_html/should_pull_diagnostics_from_embedded_languages_when_formatting.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.html
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true,
      "indentScriptAndStyle": true
    }
  }
}
```

## `file.html`

```html
<script>function () { return "ipsum" }</script>
<style>#id .class div > { background-color: ; align: center; padding: 0; } </style>

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - file.html
  


```

# Emitted Messages

```block
file.html:1:18 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a name for the function in a function declaration, but found none
  
  > 1 │ <script>function () { return "ipsum" }</script>
      │                  ^
    2 │ <style>#id .class div > { background-color: ; align: center; padding: 0; } </style>
    3 │ 
  

```

```block
file.html:2:8 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This syntax is not supported in CSS.
  
    1 │ <script>function () { return "ipsum" }</script>
  > 2 │ <style>#id .class div > { background-color: ; align: center; padding: 0; } </style>
      │        ^^^^^^^^^^^^^^^^
    3 │ 
  

```

```block
file.html format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Formatted 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
